feat: enhance security config with fine-tuned CORS policies, updated permitted paths, and stricter request authorization